--- a/module-7-project1/package.json
+++ b/module-7-project1/package.json
@@ -11,7 +11,7 @@
     "typescript",
     "course"
   ],
-  "author": "Maximilian Schwarzmüller",
+  "author": "Talha Malik",
   "license": "ISC",
   "devDependencies": {
     "lite-server": "^2.5.4"
